# docs/swagger.json
@@ -1,19 +1,8 @@
-// Package swagger Code generated by swaggo/swag. DO NOT EDIT
-package swagger
-
-import "github.com/swaggo/swag"
-
-const docTemplate = `{
-    "schemes": {{ marshal .Schemes }},
+{
     "swagger": "2.0",
     "info": {
-        "description": "{{escape .Description}}",
-        "title": "{{.Title}}",
-        "contact": {},
-        "version": "{{.Version}}"
+        "contact": {}
     },
-    "host": "{{.Host}}",
-    "basePath": "{{.BasePath}}",
     "paths": {
         "/create": {
             "post": {
@@ -31,7 +20,7 @@ const docTemplate = `{
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/docs.SubscriptionExample"
+                            "$ref": "#/definitions/swagger.SubscriptionExample"
                         }
                     }
                 ],
@@ -39,19 +28,19 @@ const docTemplate = `{
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/docs.MessageResponse"
+                            "$ref": "#/definitions/swagger.MessageResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/docs.ErrorResponse"
+                            "$ref": "#/definitions/swagger.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/docs.ErrorResponse"
+                            "$ref": "#/definitions/swagger.ErrorResponse"
                         }
                     }
                 }
@@ -76,25 +65,25 @@ const docTemplate = `{
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/docs.MessageResponse"
+                            "$ref": "#/definitions/swagger.MessageResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/docs.ErrorResponse"
+                            "$ref": "#/definitions/swagger.ErrorResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/docs.ErrorResponse"
+                            "$ref": "#/definitions/swagger.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/docs.ErrorResponse"
+                            "$ref": "#/definitions/swagger.ErrorResponse"
                         }
                     }
                 }
@@ -126,20 +115,20 @@ const docTemplate = `{
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/subscription-aggregator_internal_model.Subscription"
+                                "$ref": "#/definitions/swagger.SubscriptionResponse"
                             }
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/docs.ErrorResponse"
+                            "$ref": "#/definitions/swagger.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/docs.ErrorResponse"
+                            "$ref": "#/definitions/swagger.ErrorResponse"
                         }
                     }
                 }
@@ -164,25 +153,25 @@ const docTemplate = `{
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/subscription-aggregator_internal_model.Subscription"
+                            "$ref": "#/definitions/swagger.SubscriptionResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/docs.ErrorResponse"
+                            "$ref": "#/definitions/swagger.ErrorResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/docs.ErrorResponse"
+                            "$ref": "#/definitions/swagger.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/docs.ErrorResponse"
+                            "$ref": "#/definitions/swagger.ErrorResponse"
                         }
                     }
                 }
@@ -230,19 +219,19 @@ const docTemplate = `{
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/docs.SumResponse"
+                            "$ref": "#/definitions/swagger.SumResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/docs.ErrorResponse"
+                            "$ref": "#/definitions/swagger.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/docs.ErrorResponse"
+                            "$ref": "#/definitions/swagger.ErrorResponse"
                         }
                     }
                 }
@@ -271,7 +260,7 @@ const docTemplate = `{
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/docs.UpdateSubscriptionExample"
+                            "$ref": "#/definitions/swagger.UpdateSubscriptionExample"
                         }
                     }
                 ],
@@ -279,25 +268,25 @@ const docTemplate = `{
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/docs.MessageResponse"
+                            "$ref": "#/definitions/swagger.MessageResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/docs.ErrorResponse"
+                            "$ref": "#/definitions/swagger.ErrorResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/docs.ErrorResponse"
+                            "$ref": "#/definitions/swagger.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/docs.ErrorResponse"
+                            "$ref": "#/definitions/swagger.ErrorResponse"
                         }
                     }
                 }
@@ -305,7 +294,7 @@ const docTemplate = `{
         }
     },
     "definitions": {
-        "docs.ErrorResponse": {
+        "swagger.ErrorResponse": {
             "type": "object",
             "properties": {
                 "error": {
@@ -314,7 +303,7 @@ const docTemplate = `{
                 }
             }
         },
-        "docs.MessageResponse": {
+        "swagger.MessageResponse": {
             "type": "object",
             "properties": {
                 "id": {
@@ -327,7 +316,7 @@ const docTemplate = `{
                 }
             }
         },
-        "docs.SubscriptionExample": {
+        "swagger.SubscriptionExample": {
             "type": "object",
             "properties": {
                 "price": {
@@ -348,7 +337,40 @@ const docTemplate = `{
                 }
             }
         },
-        "docs.SumResponse": {
+        "swagger.SubscriptionResponse": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string",
+                    "example": "2025-07-26T12:34:56Z"
+                },
+                "id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "price": {
+                    "type": "integer",
+                    "example": 999
+                },
+                "service_name": {
+                    "type": "string",
+                    "example": "Netflix"
+                },
+                "start_date": {
+                    "type": "string",
+                    "example": "07-2025"
+                },
+                "updated_at": {
+                    "type": "string",
+                    "example": "2025-07-26T12:34:56Z"
+                },
+                "user_id": {
+                    "type": "string",
+                    "example": "11111111-1111-1111-1111-111111111111"
+                }
+            }
+        },
+        "swagger.SumResponse": {
             "type": "object",
             "properties": {
                 "sum_price": {
@@ -357,7 +379,7 @@ const docTemplate = `{
                 }
             }
         },
-        "docs.UpdateSubscriptionExample": {
+        "swagger.UpdateSubscriptionExample": {
             "type": "object",
             "properties": {
                 "price": {
@@ -369,73 +391,6 @@ const docTemplate = `{
                     "example": "Yandex"
                 }
             }
-        },
-        "gorm.DeletedAt": {
-            "type": "object",
-            "properties": {
-                "time": {
-                    "type": "string"
-                },
-                "valid": {
-                    "description": "Valid is true if Time is not NULL",
-                    "type": "boolean"
-                }
-            }
-        },
-        "subscription-aggregator_internal_model.Subscription": {
-            "type": "object",
-            "properties": {
-                "createdAt": {
-                    "type": "string"
-                },
-                "deletedAt": {
-                    "$ref": "#/definitions/gorm.DeletedAt"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "price": {
-                    "type": "integer"
-                },
-                "service_name": {
-                    "type": "string"
-                },
-                "start_date": {
-                    "$ref": "#/definitions/subscription-aggregator_pkg_month-year.MonthYear"
-                },
-                "updatedAt": {
-                    "type": "string"
-                },
-                "user_id": {
-                    "type": "string"
-                }
-            }
-        },
-        "subscription-aggregator_pkg_month-year.MonthYear": {
-            "type": "object",
-            "properties": {
-                "time.Time": {
-                    "type": "string"
-                }
-            }
         }
     }
-}`
-
-// SwaggerInfo holds exported Swagger Info so clients can modify it
-var SwaggerInfo = &swag.Spec{
-	Version:          "",
-	Host:             "",
-	BasePath:         "",
-	Schemes:          []string{},
-	Title:            "",
-	Description:      "",
-	InfoInstanceName: "swagger",
-	SwaggerTemplate:  docTemplate,
-	LeftDelim:        "{{",
-	RightDelim:       "}}",
-}
-
-func init() {
-	swag.Register(SwaggerInfo.InstanceName(), SwaggerInfo)
 }
